Rolled out a fixed for infinite cards overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,8 +11,9 @@
   --black-muted: #3d3935;
 }
 
+html,
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 .text-with-shadow {
